# vatsim-manager

./: .gitignore  CMakeLists.txt  README.md  VERSIONS  clientstate.cpp  clientstate.h  download.cpp  download.h  global.h  main.cpp  utils.cpp  utils.h
